--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -660,7 +660,7 @@ body::-webkit-scrollbar {
   background-color: rgb(0, 0, 0);
   font-size: 14px;
   line-height: 1.6;
-  font-family: "Montserrat", sans-serif;
+  font-family: "JetBrains Mono", monospace;
   color: #000000;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
